--- a/grid.html
+++ b/grid.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid Layout</title>
     <link rel="stylesheet" href="grid.css">
+    <link rel="icon" type="image/png" href="./images/favicon-32x32.png"/>
 </head>
 
 <body>
